# TechnicalResearch

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: engulfing_cdl.py  high_liquid.csv  high_liquid.ipynb  make_strategies_tutorial.py  test_loaders.ipynb  test_market_data_api_fpt.ipynb
src/loaders/: __init__.py  data_loader.py  market_data_api.py  user_api.py
src/technicalresearch/: __init__.py  config.py  data_loader.py
tests/: test_user_api.py
