[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "technicalresearch"
version = "0.1.0"
description = "Research tools for Vietnam stock market technical indicator analysis."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
